sso/themes/home/login/resources/css/styles.css
html {
    height: 100%;
    background-image: url('../img/background-002.jpg');
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
}

body {
    margin: 0;
}

#kc-login-wrapper {

}

#kc-form-box-wrapper {
    background-color: rgba(33,33,33 ,0.6);
    max-width: 400px;
    margin: auto;
    padding: 20px;
}

#kc-header {
    margin-top: 160px;
    margin-bottom: 150px;
    text-align: center;
    color: white;
    text-transform: uppercase;
    font-size: 40px;
    font-family: 'roboto', 'sans-serif';
}

#kc-page-title {
    margin-top: 10px;
    text-align: center;
    color: #EEEEEE;
}

.input-wrapper {
    text-align: center;
    margin-bottom: 20px;
    margin-top: 10px;
    font-family: 'roboto', 'sans-serif';
}

input[type=text], input[type=password] {
    width: 250px;
    padding: 14px 10px;
    margin: auto;
    border: 1px solid #757575;
    box-sizing: border-box;
    border-radius: 5px;
    font-family: 'roboto', 'sans-serif';
}

.checkbox {
    width: 250px;
    margin: auto;
    margin-top: 45px;
    box-sizing: border-box;
    font-family: 'roboto', 'sans-serif';
    color: white;
}

input[type=submit] {
    width: 250px;
    padding: 13px 10px;
    margin: auto;
    background-color: #003D6B;
    border: 1px solid #1A237E;
    color: #FAFAFA;
    cursor: pointer;
    font-size: 20px;
    border-radius: 5px;
    font-family: 'roboto', 'sans-serif';
}

@media only screen and (max-width: 600px) {
    #kc-form-box-wrapper {
        max-width: 75%;
    }

    input[type=text], input[type=password], input[type=submit], .checkbox {
        width: 90%;
    }
}

